<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Dashboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/manage_categories" />

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_expense" />

    <Button
        android:id="@+id/btnSetBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_budget" />
</LinearLayout>
