<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="50dp"
    tools:context=".ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_expense"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:focusable="false"
            android:hint="@string/date_hint"
            android:inputType="none"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/description_hint"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/btn_add_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Add Receipt Photo"  />

        <ImageView
            android:id="@+id/iv_receipt_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSaveExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_expense"
            android:layout_marginBottom="25dp"/>
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            tools:ignore="MissingClass" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>
</ScrollView>